<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_protection_scrim_height"
                android:layout_alignBottom="@+id/main_backdrop"
                android:layout_gravity="bottom"
                android:background="@drawable/photo_background_protection" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <ImageView
                android:id="@+id/main_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:transitionName="poster"
                app:layout_collapseMode="parallax" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:columnCount="2"
            app:useDefaultMargins="true">

            <TextView
                style="@style/left_column_bold"
                android:text="Title"
                app:layout_column="0"
                app:layout_row="0" />

            <TextView
                android:id="@+id/grid_title"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="0"
                tools:text="Me Before You" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/released"
                app:layout_column="0"
                app:layout_row="1" />

            <TextView
                android:id="@+id/grid_released"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="1"
                tools:text="03 Jun 2016" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/runtime"
                app:layout_column="0"
                app:layout_row="2" />

            <TextView
                android:id="@+id/grid_runtime"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="2"
                tools:text="110 min" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/director"
                app:layout_column="0"
                app:layout_row="3" />

            <TextView
                android:id="@+id/grid_director"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="3"
                tools:text="Thea Sharrock" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/Genre"
                app:layout_column="0"
                app:layout_row="4" />

            <TextView
                android:id="@+id/grid_genre"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="4"
                tools:text="Drama, Romance" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/Writer"
                app:layout_column="0"
                app:layout_row="5" />

            <TextView
                android:id="@+id/grid_writers"
                style="@style/right_column_normal"
                android:layout_width="0dp"
                app:layout_column="1"
                app:layout_row="5"
                tools:text="Jojo Moyes (screenplay), Jojo Moyes (novel)" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/actors"
                app:layout_column="0"
                app:layout_row="6" />

            <TextView
                android:id="@+id/grid_actors"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="6"
                tools:text="Sam Claflin, Vanessa Kirby, Emilia Clarke, Eileen Dunwoodie" />

            <TextView
                style="@style/left_column_bold"
                android:text="@string/plot"
                app:layout_column="0"
                app:layout_row="7" />

            <TextView
                android:id="@+id/grid_plot"
                style="@style/right_column_normal"
                app:layout_column="1"
                app:layout_row="7"
                tools:text="Lou Clark knows lots of things. She knows how many footsteps there are between the bus stop and home..." />
        </android.support.v7.widget.GridLayout>

    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>